--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_admin.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_admin.html
@@ -2,65 +2,71 @@
 <#case 0>
 <#if business_class?? >
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
-<${macro}tabs tab="${business_class.businessClass?lower_case}" />
-
-<${macro}rowBoxHeader i18nTitleKey="${plugin_name}.create_${business_class.businessClass?lower_case}.title">
-    <form class="form-horizontal" method="post" name="create_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
+<${macro}tabs2 tab="${business_class.businessClass?lower_case}" />
+<${macro}box>
+	<${macro}boxHeader title='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.title${i18n_close}' />
+	<${macro}boxBody>
+    <${macro}tform name='create_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}.jsp'>
         <${macro}messages errors=errors />
         <input type="hidden" id="id" name="id"/>
         
         <#list business_class.attributes as attribute>
-        <${macro}fieldInputText i18nLabelKey="${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}" inputName="${attribute.paramName}" <#if attribute.notNull>mandatory=true</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" i18nHelpBlockKey="${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help" />
+				<${macro}formGroup labelKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' helpKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}' <#if attribute.notNull>mandatory=true</#if>>
+					<${macro}input type='text' name='${attribute.paramName}' value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!\'\'${bra_close}' />
+				</${macro}formGroup>
         </#list>
-        <${macro}actionButtons button1Name="action_create${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}s"/>
-    </form>
-</${macro}rowBoxHeader>
+				
+				<${macro}actionButtons button1Name="action_create${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}"/>
+    </${macro}tform>
+	</${macro}boxBody>
+</${macro}box>
 </#if>  
 <#break>
+	
 <#case 1>
 <#if business_class?? >
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
-<${macro}tabs tab="${business_class.businessClass?lower_case}" />
+<${macro}tabs2 tab="${business_class.businessClass?lower_case}" />
 
-<${macro}rowBoxHeader i18nTitleKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.title">
-    <form class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
-        <${macro}messages errors=errors />
-        <input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
-        
-        <#list business_class.attributes as attribute>
-        <${macro}fieldInputText i18nLabelKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}" inputName="${attribute.paramName}" <#if attribute.notNull>mandatory=true</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" i18nHelpBlockKey="${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}.help" />
-        </#list>
-        <${macro}actionButtons button1Name="action_modify${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}s"/>
-    </form>
-</${macro}rowBoxHeader>
+<${macro}box>
+	<${macro}boxHeader title='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.title${i18n_close}' />
+	<${macro}boxBody>
+    <${macro}tform class="form-horizontal" method="post" name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}.jsp">
+			<${macro}messages errors=errors />
+			<input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
+			
+			<#list business_class.attributes as attribute>
+				<${macro}formGroup labelKey='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' helpKey='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}' <#if attribute.notNull>mandatory=true</#if>>
+					<${macro}input type='text' name='${attribute.paramName}' value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}' />
+				</${macro}formGroup>
+			</#list>
+        <${macro}actionButtons button1Name="action_modify${business_class.businessClass}" button2Name="view_manage${business_class.businessClass}"/>
+    </${macro}tform>
+	</${macro}boxBody>
+</${macro}box>
 </#if>
 <#break>
+
 <#case 2>
 <#if business_class?? > 
 <${include} "${admin_feature.featureName?lower_case}_tabs.html" />
-<${macro}tabs tab="${business_class.businessClass?lower_case}" />
+<${macro}tabs2 tab="${business_class.businessClass?lower_case}" />
 
-<${macro}rowBox>
-    <${macro}boxHeader i18nTitleKey="${plugin_name}.manage_${business_class.businessClass?lower_case}s.title">
-        <${macro}headerButtons>
-
-        
-        <form class="form-inline pull-right" method="post" name="manage_${business_class.businessClass?lower_case}s" action="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp">
-            <!-- Add pull-right to class1 -->
-            <${macro}actionButtons button1Name="view_create${business_class.businessClass}" icon1="icon-plus icon-white" i18nValue1Key="${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd" />
-        </form>
-        
-    </${macro}headerButtons>
-    </${macro}boxHeader>
-    <${macro}boxBody>    
+<${macro}box>
+	<${macro}boxHeader title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}.title${i18n_close}' boxTools=true>
+		<${macro}tform class='form-inline pull-right' name='manage_${business_class.businessClass?lower_case}' action='jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}.jsp'>
+			<${macro}button type='submit' name='view_create${business_class.businessClass}' buttonIcon='plus' title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}.buttonAdd${i18n_close}' />
+		</${macro}tform>
+	</${macro}boxHeader>
+	<${macro}boxBody>    
     <${macro}messages infos=infos />
     <${macro}paginationAdmin paginator=paginator combo=1 />
-    
+    <div class="clearfix"></div>
     <${macro}table>
         <tr>
             <input type="hidden" id="id" name="id"/>
             <#list business_class.attributes as attribute>
-            <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.column${attribute.name}${i18n_close}</th>
+            <th>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}.column${attribute.name}${i18n_close}</th>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
         </tr>
@@ -74,15 +80,9 @@
             </td>
         </#list>
         <td>
-            <a href="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-primary btn-sm" title="${i18n_open}portal.util.labelModify${i18n_close}">
-                <i class="fa fa-pencil"></i>
-            </a>
-
-            <a href="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-danger btn-sm" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
-                <i class="fa fa-trash"></i>
-            </a>
+						<${macro}aButton href='jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelModify${i18n_close}' buttonIcon='pencil' showTitle=false />
+						
+						<${macro}aButton href='jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}' title='${i18n_open}portal.util.labelDelete${i18n_close}' buttonIcon='trash' color='btn-danger' showTitle=false />
         </td>
         </tr>
         </${variable}list>
@@ -91,9 +91,8 @@
     <${macro}paginationAdmin paginator=paginator />
 
   </${macro}boxBody>
-</${macro}rowBox>
+</${macro}box>
 </#if>  
 <#break>
 <#default>
-</#switch>  
-
+</#switch>
