PLUGINWIZARD-114: Added module management functionality

--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_class.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_class.html
@@ -31,7 +31,7 @@
  *
  * License 1.0
  */ 
-package fr.paris.lutece.plugins.${plugin_name}.business;
+package fr.paris.lutece.plugins.${radical_package}.business;
 
 import javax.validation.constraints.*;
 import org.hibernate.validator.constraints.*;
