--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_dao.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_dao.html
@@ -32,7 +32,7 @@
  * License 1.0
  */
 
-package fr.paris.lutece.plugins.${plugin_name}.business;
+package fr.paris.lutece.plugins.${radical_package}.business;
 
 import fr.paris.lutece.portal.service.plugin.Plugin;
 import fr.paris.lutece.util.ReferenceList;
