--- a/webapp/WEB-INF/templates/generators/default/portlet/gt_portlet_idao.html
+++ b/webapp/WEB-INF/templates/generators/default/portlet/gt_portlet_idao.html
@@ -31,7 +31,7 @@
  *
  * License 1.0
  */
-package fr.paris.lutece.plugins.${plugin_name}.business.portlet;
+package fr.paris.lutece.plugins.${radical_package}.business.portlet;
 
 import fr.paris.lutece.portal.business.portlet.IPortletInterfaceDAO;
 import fr.paris.lutece.portal.business.portlet.Portlet;
