--- a/webapp/WEB-INF/templates/generators/default/portlet/gt_portlet_jsp.html
+++ b/webapp/WEB-INF/templates/generators/default/portlet/gt_portlet_jsp.html
@@ -2,8 +2,12 @@
 <#switch portlet_jsp_type>
  
  <#case 0>
-<%@ page errorPage="../../ErrorPage.jsp" %>
-
+ <#if is_Module>
+	 <%@ page errorPage="../../../../ErrorPage.jsp" %>
+ <#else>
+ 	 <%@ page errorPage="../../ErrorPage.jsp" %>
+ 	
+ </#if>
 <jsp:include page="../../PortletAdminHeader.jsp" />
 
 <jsp:useBean id="${portlet.portletClass}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.portlet.${portlet.portletClass}JspBean" />
@@ -11,13 +15,22 @@
 <% ${portlet.portletClass}.init( request, ${portlet.portletClass}.RIGHT_MANAGE_ADMIN_SITE ); %>
 <%= ${portlet.portletClass}.getModify ( request ) %>
 
-<%@ include file="../../AdminFooter.jsp" %>
 
+ <#if is_Module>
+	<%@ include file="../../../../AdminFooter.jsp" %>
+ <#else>
+	<%@ include file="../../AdminFooter.jsp" %>
+ 	
+ </#if>
  <#break>
  
   <#case 1>
-<%@ page errorPage="../../ErrorPage.jsp" %>
-
+ <#if is_Module>
+	 <%@ page errorPage="../../../../ErrorPage.jsp" %>
+ <#else>
+ 	 <%@ page errorPage="../../ErrorPage.jsp" %>
+ 	
+ </#if>
 <jsp:useBean id="${portlet.portletClass}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.portlet.${portlet.portletClass}JspBean" />
 
 <%
@@ -29,22 +42,36 @@
  
   <#case 2>
 
-<%@ page errorPage="../../ErrorPage.jsp" %>
-<jsp:include page="../../PortletAdminHeader.jsp" />
+ <#if is_Module>
+	 <%@ page errorPage="../../../../ErrorPage.jsp" %>
+ <#else>
+ 	 <%@ page errorPage="../../ErrorPage.jsp" %>
+ 	
+ </#if>
+ <jsp:include page="../../PortletAdminHeader.jsp" />
 
 <jsp:useBean id="${portlet.portletClass}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.portlet.${portlet.portletClass}JspBean" />
 
 <% ${portlet.portletClass}.init( request, ${portlet.portletClass}.RIGHT_MANAGE_ADMIN_SITE); %>
 <%= ${portlet.portletClass}.getCreate ( request ) %>
 
-<%@ include file="../../AdminFooter.jsp" %>
+ <#if is_Module>
+	<%@ include file="../../../../AdminFooter.jsp" %>
+ <#else>
+	<%@ include file="../../AdminFooter.jsp" %>
+ 	
+ </#if>
 
  <#break>
 
   <#case 3>
 
-<%@ page errorPage="../../ErrorPage.jsp" %>
-
+ <#if is_Module>
+	 <%@ page errorPage="../../../../ErrorPage.jsp" %>
+ <#else>
+ 	 <%@ page errorPage="../../ErrorPage.jsp" %>
+ 	
+ </#if>
 <jsp:useBean id="${portlet.portletClass}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.portlet.${portlet.portletClass}JspBean" />
 
 <%
