--- a/webapp/WEB-INF/templates/generators/default/business/gt_business_home.html
+++ b/webapp/WEB-INF/templates/generators/default/business/gt_business_home.html
@@ -31,7 +31,7 @@
  *
  * License 1.0
  */
- package fr.paris.lutece.plugins.${plugin_name}.business;
+ package fr.paris.lutece.plugins.${radical_package}.business;
 
 import fr.paris.lutece.portal.service.plugin.Plugin;
 import fr.paris.lutece.portal.service.plugin.PluginService;
@@ -46,8 +46,8 @@ import java.util.List;
 public final class ${business_class.businessClass}Home
 {
     // Static variable pointed at the DAO instance
-    private static I${business_class.businessClass}DAO _dao = SpringContextService.getBean( "${plugin_name}.${business_class.instanceName}DAO" );
-    private static Plugin _plugin = PluginService.getPlugin( "${plugin_name}" );
+    private static I${business_class.businessClass}DAO _dao = SpringContextService.getBean( "${bean_name}.${business_class.instanceName}DAO" );
+    private static Plugin _plugin = PluginService.getPlugin( "${bean_name}" );
 
     /**
      * Private constructor - this class need not be instantiated
