--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_admin_tabs.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_admin_tabs.html
@@ -4,10 +4,11 @@
 		<#if business_classes?? >
 			<#list business_classes?sort_by('businessClass') as business_class>
 			<li <${variable}if tab="${business_class.businessClass?lower_case}">class="active"</${variable}if>>
-				<a href="jsp/admin/plugins/${plugin_name?lower_case}/Manage${business_class.businessClass?cap_first}s.jsp">${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle${i18n_close}</a>
+				<a href="jsp/admin/plugins/${link?lower_case}/Manage${business_class.businessClass?cap_first}s.jsp">${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle${i18n_close}</a>
 			</li>
 			</#list>	
 		</#if>
 	</${macro}listTabs>
 </${macro}tabs>
+
 </${macro_def}>
