--- a/webapp/WEB-INF/templates/generators/default/jsp/gt_jsp_feature.html
+++ b/webapp/WEB-INF/templates/generators/default/jsp/gt_jsp_feature.html
@@ -1,10 +1,17 @@
+<#if is_Module>
+<%@ page errorPage="/../../../../ErrorPage.jsp" %>
+<jsp:include page="../../../../AdminHeader.jsp" />
+<#else>
 <%@ page errorPage="../../ErrorPage.jsp" %>
-
 <jsp:include page="../../AdminHeader.jsp" />
-
+</#if>
 <jsp:useBean id="${feature_name?lower_case}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.${feature_name}JspBean" />
 
 <% ${feature_name?lower_case}.init( request, ${feature_name?lower_case}.RIGHT_${feature_name?upper_case} ); %>
 <%= ${feature_name?lower_case}.get${feature_name}Home ( request ) %>
-
+<#if is_Module>
+<%@ include file="../../../../AdminFooter.jsp" %>
+<#else>
 <%@ include file="../../AdminFooter.jsp" %>
+
+</#if>
