--- a/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_abstract.html
+++ b/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean_abstract.html
@@ -31,7 +31,13 @@
  *
  * License 1.0
  */
-package fr.paris.lutece.plugins.${plugin_model.pluginName}.web;
+ <#if plugin_model.type= "MODULE" >
+  	<#assign radicalPackage= plugin_model.pluginName?split("-")[0]+".modules."+plugin_model.pluginName?split("-")[1] />
+ <#else>
+ 	<#assign radicalPackage= plugin_model.pluginName />
+ </#if>
+ 
+package fr.paris.lutece.plugins.${radicalPackage}.web;
 
 import fr.paris.lutece.portal.service.util.AppPropertiesService;
 import fr.paris.lutece.portal.util.mvc.admin.MVCAdminJspBean;
