--- a/webapp/WEB-INF/templates/generators/default/rest/gt_rest_swagger.html
+++ b/webapp/WEB-INF/templates/generators/default/rest/gt_rest_swagger.html
@@ -31,7 +31,12 @@
  *
  * License 1.0
  */
-package fr.paris.lutece.plugins.${plugin_model.pluginName}.rs;
+   <#if plugin_model.type= "MODULE" >
+  	<#assign radicalPackage= plugin_model.pluginName?split("-")[0]+".modules."+plugin_model.pluginName?split("-")[1] />
+ <#else>
+ 	<#assign radicalPackage= plugin_model.pluginName /> 	
+ </#if>
+package fr.paris.lutece.plugins.${radicalPackage}.rs;
 
 import fr.paris.lutece.plugins.rest.service.RestConstants;
 import fr.paris.lutece.portal.service.util.AppPathService;
