--- a/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage.html
+++ b/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage.html
@@ -31,11 +31,20 @@
  *
  * License 1.0
  */
+  <#if plugin_model.type= "MODULE" >
+  	<#assign radicalPackage= plugin_model.pluginName?split("-")[0]+".modules."+plugin_model.pluginName?split("-")[1] />
+  	<#assign msg= "module."+plugin_model.pluginName?split("-")[0]+"."+plugin_model.pluginName?split("-")[1] />
+ <#else>
+ 	<#assign radicalPackage= plugin_model.pluginName />
+ 	<#assign msg= plugin_model.pluginName />
+ 	
+ </#if>
 <#if business_class??>
-package fr.paris.lutece.plugins.${plugin_model.pluginName}.web;
+
+package fr.paris.lutece.plugins.${radicalPackage}.web;
  
-import fr.paris.lutece.plugins.${plugin_model.pluginName}.business.${business_class.businessClass?cap_first};
-import fr.paris.lutece.plugins.${plugin_model.pluginName}.business.${business_class.businessClass?cap_first}Home;
+import fr.paris.lutece.plugins.${radicalPackage}.business.${business_class.businessClass?cap_first};
+import fr.paris.lutece.plugins.${radicalPackage}.business.${business_class.businessClass?cap_first}Home;
 import fr.paris.lutece.portal.util.mvc.commons.annotations.Action;
 import fr.paris.lutece.portal.web.xpages.XPage;
 import fr.paris.lutece.portal.util.mvc.xpage.MVCApplication;
@@ -52,13 +61,13 @@ import javax.servlet.http.HttpServletRequest;
 /**
  * This class provides the user interface to manage ${business_class.businessClass} xpages ( manage, create, modify, remove )
  */
-@Controller( xpageName = "${business_class.businessClass?lower_case}" , pageTitleI18nKey = "${plugin_model.pluginName}.xpage.${business_class.businessClass?lower_case}.pageTitle" , pagePathI18nKey = "${plugin_model.pluginName}.xpage.${business_class.businessClass?lower_case}.pagePathLabel" )
+@Controller( xpageName = "${business_class.businessClass?lower_case}" , pageTitleI18nKey = "${msg}.xpage.${business_class.businessClass?lower_case}.pageTitle" , pagePathI18nKey = "${msg}.xpage.${business_class.businessClass?lower_case}.pagePathLabel" )
 public class ${business_class.businessClass}XPage extends MVCApplication
 {
     // Templates
-    private static final String TEMPLATE_MANAGE_${business_class.businessClass?upper_case}S="/skin/plugins/${plugin_model.pluginName}/manage_${business_class.businessClass?lower_case}s.html";
-    private static final String TEMPLATE_CREATE_${business_class.businessClass?upper_case}="/skin/plugins/${plugin_model.pluginName}/create_${business_class.businessClass?lower_case}.html";
-    private static final String TEMPLATE_MODIFY_${business_class.businessClass?upper_case}="/skin/plugins/${plugin_model.pluginName}/modify_${business_class.businessClass?lower_case}.html";
+    private static final String TEMPLATE_MANAGE_${business_class.businessClass?upper_case}S="/skin/plugins/${radicalPackage?replace(".","/")}/manage_${business_class.businessClass?lower_case}s.html";
+    private static final String TEMPLATE_CREATE_${business_class.businessClass?upper_case}="/skin/plugins/${radicalPackage?replace(".","/")}/create_${business_class.businessClass?lower_case}.html";
+    private static final String TEMPLATE_MODIFY_${business_class.businessClass?upper_case}="/skin/plugins/${radicalPackage?replace(".","/")}/modify_${business_class.businessClass?lower_case}.html";
     
     // JSP
     private static final String JSP_PAGE_PORTAL = "jsp/site/Portal.jsp";
@@ -73,7 +82,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     private static final String MARK_${business_class.businessClass?upper_case} = "${business_class.businessClass?lower_case}";
     
     // Message
-    private static final String MESSAGE_CONFIRM_REMOVE_${business_class.businessClass?upper_case} = "${plugin_model.pluginName}.message.confirmRemove${business_class.businessClass?cap_first}";
+    private static final String MESSAGE_CONFIRM_REMOVE_${business_class.businessClass?upper_case} = "${msg}.message.confirmRemove${business_class.businessClass?cap_first}";
     
     // Views
     private static final String VIEW_MANAGE_${business_class.businessClass?upper_case}S = "manage${business_class.businessClass}s";
@@ -87,9 +96,9 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     private static final String ACTION_CONFIRM_REMOVE_${business_class.businessClass?upper_case} = "confirmRemove${business_class.businessClass}";
 
     // Infos
-    private static final String INFO_${business_class.businessClass?upper_case}_CREATED = "${plugin_model.pluginName}.info.${business_class.businessClass?lower_case}.created";
-    private static final String INFO_${business_class.businessClass?upper_case}_UPDATED = "${plugin_model.pluginName}.info.${business_class.businessClass?lower_case}.updated";
-    private static final String INFO_${business_class.businessClass?upper_case}_REMOVED = "${plugin_model.pluginName}.info.${business_class.businessClass?lower_case}.removed";
+    private static final String INFO_${business_class.businessClass?upper_case}_CREATED = "${msg}.info.${business_class.businessClass?lower_case}.created";
+    private static final String INFO_${business_class.businessClass?upper_case}_UPDATED = "${msg}.info.${business_class.businessClass?lower_case}.updated";
+    private static final String INFO_${business_class.businessClass?upper_case}_REMOVED = "${msg}.info.${business_class.businessClass?lower_case}.removed";
     
     // Session variable to store working values
     private ${business_class.businessClass?cap_first} _${business_class.businessClass?lower_case};
@@ -233,7 +242,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     }
 }
 <#else>
-package fr.paris.lutece.plugins.${plugin_model.pluginName}.web;
+package fr.paris.lutece.plugins.${radicalPackage}.web;
 
 import fr.paris.lutece.portal.web.xpages.XPage;
 import fr.paris.lutece.portal.util.mvc.xpage.MVCApplication;
@@ -245,10 +254,10 @@ import javax.servlet.http.HttpServletRequest;
 /**
  * This class provides a simple implementation of an XPage
  */
-@Controller( xpageName = "${plugin_application.applicationName}" , pageTitleI18nKey = "${plugin_model.pluginName}.xpage.${plugin_application.applicationName}.pageTitle" , pagePathI18nKey = "${plugin_model.pluginName}.xpage.${plugin_application.applicationName}.pagePathLabel" )
+@Controller( xpageName = "${plugin_application.applicationName}" , pageTitleI18nKey = "${msg}.xpage.${plugin_application.applicationName}.pageTitle" , pagePathI18nKey = "${msg}.xpage.${plugin_application.applicationName}.pagePathLabel" )
 public class ${plugin_application.applicationClass} extends MVCApplication
 {
-    private static final String TEMPLATE_XPAGE = "/skin/plugins/${plugin_model.pluginName}/${plugin_application.applicationName}.html";
+    private static final String TEMPLATE_XPAGE = "/skin/plugins/${radicalPackage?replace(".","/")}/${plugin_application.applicationName}.html";
     private static final String VIEW_HOME = "home";
     
     /**
