PLUGINWIZARD-115 fix i18n business class title label

--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage.html
@@ -67,7 +67,7 @@
 			<${macro}button type='submit' name='view_create${business_class.businessClass}' class='pull-right' buttonIcon='plus' title='${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.buttonAdd${i18n_close}' />
 		</${macro}tform>
 
-    <h4>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.title{i18n_close}</h4>
+    <h4>${i18n_open}${plugin_name}.manage_${business_class.businessClass?lower_case}s.title${i18n_close}</h4>
         
     <${macro}table>
 			<tr>
