--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage.html
@@ -9,13 +9,13 @@
 	<${macro}columns>
 		<${macro}tform class='form-horizontal' action='jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}'>
 			<fieldset>
-				<legend>${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.title{i18n_close}</legend>
+				<legend>${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.title${i18n_close}</legend>
 				<${macro}messages errors=errors />
 				<input type="hidden" id="id" name="id"/>  
 				
 				<#list business_class.attributes as attribute>
           <${macro}formGroup labelFor='${attribute.paramName}' labelKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' helpKey='${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}' mandatory=true>
-						<${macro}input type='text' id='${attribute.paramName}' name='${attribute.paramName}' value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}' <#if attribute.maxLength &gt; 0> maxlength='${attribute.maxLength}'</#if> tabIndex='${attribute_index}' />
+						<${macro}input type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> tabIndex="${attribute_index}" />
 					</${macro}formGroup>
 				</#list>
         <${macro}formGroup>
@@ -36,13 +36,13 @@
 	<${macro}columns>
 		<${macro}tform class='form-horizontal' action='jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}'>
 			<fieldset>
-				<legend>${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.title{i18n_close}</legend>
+				<legend>${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.title${i18n_close}</legend>
 				<${macro}messages errors=errors />
 				<input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
 				
 				<#list business_class.attributes as attribute>
 				<${macro}formGroup labelFor='${attribute.paramName}' labelKey='${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}' mandatory=true>
-          <${macro}input type='text' id='${attribute.paramName}' name='${attribute.paramName}' <#if attribute.maxLength &gt; 0> maxlength='${attribute.maxLength}'</#if> value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}' tabIndex='${attribute_index}' />
+          <${macro}input type='text' id='${attribute.paramName}' name='${attribute.paramName}' <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}' tabIndex='${attribute_index}' />
 				</${macro}formGroup>
 				</#list>
 
