PLUGINWIZARD-115 prefix the abstract JSPBean feature class with 'Abstract'

--- a/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean.html
+++ b/webapp/WEB-INF/templates/generators/default/jspbean/gt_jspbean.html
@@ -50,7 +50,7 @@ import javax.servlet.http.HttpServletRequest;
  * This class provides the user interface to manage ${business_class.businessClass} features ( manage, create, modify, remove )
  */
 @Controller( controllerJsp = "Manage${business_class.businessClass}s.jsp", controllerPath = "jsp/admin/plugins/${plugin_model.pluginName}/", right = "${feature_right}" )
-public class ${business_class.businessClass}JspBean extends ${feature_name}JspBean
+public class ${business_class.businessClass}JspBean extends Abstract${feature_name}JspBean
 {
     // Templates
     private static final String TEMPLATE_MANAGE_${business_class.businessClass?upper_case}S = "/admin/plugins/${plugin_model.pluginName}/manage_${business_class.businessClass?lower_case}s.html";
