PLUGINWIZARD-114 centralize all naming methods to the pluginModel bean

--- a/webapp/WEB-INF/templates/generators/default/jsp/gt_jsp_feature.html
+++ b/webapp/WEB-INF/templates/generators/default/jsp/gt_jsp_feature.html
@@ -1,17 +1,10 @@
-<#if is_Module>
-<%@ page errorPage="/../../../../ErrorPage.jsp" %>
-<jsp:include page="../../../../AdminHeader.jsp" />
-<#else>
-<%@ page errorPage="../../ErrorPage.jsp" %>
-<jsp:include page="../../AdminHeader.jsp" />
-</#if>
+
+<%@ page errorPage="<#if is_Module>../../</#if>../../ErrorPage.jsp" %>
+<jsp:include page="<#if is_Module>../../</#if>../../AdminHeader.jsp" />
+
 <jsp:useBean id="${feature_name?lower_case}" scope="session" class="fr.paris.lutece.plugins.${plugin_name}.web.${feature_name}JspBean" />
 
 <% ${feature_name?lower_case}.init( request, ${feature_name?lower_case}.RIGHT_${feature_name?upper_case} ); %>
 <%= ${feature_name?lower_case}.get${feature_name}Home ( request ) %>
-<#if is_Module>
-<%@ include file="../../../../AdminFooter.jsp" %>
-<#else>
-<%@ include file="../../AdminFooter.jsp" %>
 
-</#if>
+<%@ include file="<#if is_Module>../../</#if>../../AdminFooter.jsp" %>
