--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -33,12 +33,10 @@
 								<label class="col-md-3 control-label">Type :</label>            
 								<div class="col-md-9">
 									<select class="form-control" name="type">    				
-										<option value="PLUGIN">Plugin
-										 <#if (plugin_model.type?? && plugin_model.type= 'MODULE') || plugin_model.pluginName?contains('-')>
-										 	<option value="MODULE" selected>Module</option>	
-										 <#else>
-										 	<option value="MODULE">Module</option>	
-										 </#if>			
+										<option value="PLUGIN">Plugin</option>
+                                                                                <option value="MODULE"
+										 <#if (plugin_model.type?? && plugin_model.type= 'MODULE') || plugin_model.pluginName?contains('-')> selected </#if>	
+                                                                                </option>		
 									</select>     
 								</div>                   	
 							</div>  
