--- a/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
+++ b/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>3.0.3</version>
+        <version>${pom_parent_version}</version>
     </parent>
 
     <modelVersion>${pom_model_version}</modelVersion>
@@ -26,14 +26,14 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[5.0.0,)</version>
+            <version>${pom_dependencies_core_version}</version>
             <type>lutece-core</type>
         </dependency>
         <#if plugin.getRest().getIdBusinessClasses()?? && plugin.getRest().getIdBusinessClasses()?size &gt; 0 >
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-rest</artifactId>
-            <version>[3.0.0,)</version>
+            <version>${pom_dependencies_rest_version}</version>
             <type>lutece-plugin</type>
         </dependency>
         </#if>
