--- a/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
+++ b/webapp/WEB-INF/templates/generators/default/xml/gt_xml_pom_file.html
@@ -13,14 +13,32 @@
     <version>${plugin.pluginVersion}-SNAPSHOT</version>
     <name>Lutece ${plugin.pluginName?lower_case} plugin</name>
 
-    <repositories>
-        <repository>
-            <id>lutece</id>
-            <name>luteceRepository</name>
-            <url>http://dev.lutece.paris.fr/maven_repository</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
+     <repositories>
+         <repository>
+             <id>lutece</id>
+             <name>luteceRepository</name>
+             <url>http://dev.lutece.paris.fr/maven_repository</url>
+-            <layout>default</layout>
+-        </repository>
++            <snapshots>
++                <enabled>false</enabled>
++            </snapshots>
++            <releases>
++                <enabled>true</enabled>
++            </releases>
++        </repository>        
++        <repository>
++            <id>luteceSnapshot</id>
++            <name>luteceSnapshot</name>
++            <url>http://dev.lutece.paris.fr/snapshot_repository</url>
++            <snapshots>
++                <enabled>true</enabled>
++            </snapshots>
++            <releases>
++                <enabled>false</enabled>
++            </releases>
++        </repository>        
+     </repositories>
 
     <dependencies>
         <dependency>
